--- a/todo.html
+++ b/todo.html
@@ -21,7 +21,7 @@
    <a href="todo.html">TO DO</a>
     <a href="language.html">LANGUAGE</a>
     <a href="groceries.html">GROCERIES</a>
-    <a href="dashboard.html">DASHBOARD</a>
+    <a href="index.html">DASHBOARD</a>
   <p class="whiteText">YEDIDIA 2021</p>
 </div>
 </div>
