--- a/groceries.html
+++ b/groceries.html
@@ -74,17 +74,31 @@
    <div class="bottom">
     <div class="recipe-cards container">
         <div class="row">
-            <div class="col">
-                <img class="image1" src="" alt="">
-                <div class="recipe-directions-main"></div>
+            <div class="col-lg-4 col-sm-13">
+            <div class="card" style="width: 16rem;">
+              <img class="card-img-top image1" src="" alt="">
+              <div class="card-body">
+                <p class="card-text recipe-directions-main">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
             </div>
-            <div class="col">
-                <img class="image2" src="" alt="">
-                <div class="recipe-directions-side"></div>
             </div>
-            <div class="col">
-                <img class="image3" src="" alt="">
-                <div class="recipe-directions-sweet"></div>
+            
+            <div class="col-lg-4 col-sm-12">
+               <div class="card" style="width: 16rem;">
+              <img class="card-img-top image2" src="" alt="">
+              <div class="card-body">
+                <p class="card-text recipe-directions-side">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+            </div>
+            
+            <div class="col-lg-4 col-sm-12">
+               <div class="card" style="width: 16rem;">
+              <img class="card-img-top image3" src="" alt="">
+              <div class="card-body">
+                <p class="card-text recipe-directions-sweet">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
             </div>
         </div>
     </div>
