--- a/groceries.html
+++ b/groceries.html
@@ -67,6 +67,7 @@
 
    
     <div class="grocery-container">
+       <h2>Grocery List</h2>
         <ul class="grocery-list"></ul>
     </div>
    </div> 
@@ -75,7 +76,7 @@
     <div class="recipe-cards container">
         <div class="row">
             <div class="col-lg-4 col-sm-13">
-            <div class="card" style="width: 16rem;">
+            <div class="card" style="width: 19rem;">
               <img class="card-img-top image1" src="" alt="">
               <div class="card-body">
                 <p class="card-text recipe-directions-main">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -84,7 +85,7 @@
             </div>
             
             <div class="col-lg-4 col-sm-12">
-               <div class="card" style="width: 16rem;">
+               <div class="card" style="width: 19rem;">
               <img class="card-img-top image2" src="" alt="">
               <div class="card-body">
                 <p class="card-text recipe-directions-side">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -93,7 +94,7 @@
             </div>
             
             <div class="col-lg-4 col-sm-12">
-               <div class="card" style="width: 16rem;">
+               <div class="card" style="width: 19rem;">
               <img class="card-img-top image3" src="" alt="">
               <div class="card-body">
                 <p class="card-text recipe-directions-sweet">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
