--- a/groceries.html
+++ b/groceries.html
@@ -64,6 +64,7 @@
               <img class="card-img-top image1" src="" alt="">
               <div class="card-body">
                <div class="card-title"></div>
+               <p class="card-list"></p>
                 <p class="card-text recipe-directions-main"></p>
               </div>
             </div>
@@ -84,7 +85,8 @@
               <img class="card-img-top image2" src="" alt="">
               <div class="card-body">
                <div class="card-title"></div>
-                <p class="card-text recipe-directions-side"></p>
+               <p class="card-list"></p>
+                <p class="card-text recipe-directions-sauce"></p>
               </div>
             </div>
             </div>
@@ -103,6 +105,7 @@
               <img class="card-img-top image3" src="" alt="">
               <div class="card-body">
                <div class="card-title"></div>
+               <p class="card-list"></p>
                 <p class="card-text recipe-directions-sweet"></p>
               </div>
             </div>
@@ -123,6 +126,7 @@
               <img class="card-img-top image4" src="" alt="">
               <div class="card-body">
                <div class="card-title"></div>
+               <p class="card-list"></p>
                 <p class="card-text recipe-directions-sauce"></p>
               </div>
             </div>
