--- a/groceries.html
+++ b/groceries.html
@@ -50,8 +50,10 @@
     
     <header>
         <h1>Grocery List Generator</h1>
+        <h3>effort level</h3>
+        <h3>meals made from effort</h3>
     </header>
-    <div class="row threeMeal">
+    <div class="threeMeal">
         <div class="partA">
             <div class="col mx-auto">
                     <button class="entree" id="message1"></button>
