--- a/groceries.html
+++ b/groceries.html
@@ -54,7 +54,7 @@
         <h3>meals made from effort</h3>
     </header>
     
-    <div class="threeMeal flex-row flex-wrap">
+    <div class="threeMeal">
         <div class="partA">
             <div class="">
                     <button class="entree" id="message1"></button>
@@ -68,6 +68,7 @@
               <div class="card-body">
                <div class="card-title"></div>
                <p class="card-list"></p>
+               <ul class="inListOne"></ul>
                 <p class="card-text "></p>
               </div>
             </div>
