--- a/groceries.html
+++ b/groceries.html
@@ -53,7 +53,7 @@
 
     </header>
     
-    <div class="threeMeal container-fluid">
+    <div class="threeMeal ">
        <div class="row no-gutters">
         <div class="partA col-lg-3 col-xs-12">
         <div class="effort">
