--- a/flashcards.html
+++ b/flashcards.html
@@ -28,7 +28,7 @@
     <div class="language ">
        <h4>Choose 2 Languages:</h4>
        <button class="button_slide slide_right">English</button>
-        <button class="button_slide slide_right">French</button>
+        <button class="button_slide slide_right">Français</button>
         <button class="button_slide slide_right">Português</button>
         <button class="button_slide slide_right">Lingala</button>
         <button class="button_slide slide_right">Japanese</button>
