--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
   <a href="groceries.html" class="menu-item"><i class="fas fa-shopping-cart"></i> </a>
   <a href="exercise.html" class="menu-item"><i class="fas fa-heartbeat"></i> </a>
-  <a href="language.html" class="menu-item"><i class="far fa-comments"></i> </a>
+  <a href="flashcards.html" class="menu-item"><i class="far fa-comments"></i> </a>
 <!--  <a href="#" class="menu-item"> <i class="fa fa-envelope"></i> </a>-->
   
   <!-- filters -->
